--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -164,7 +164,7 @@ In Abbildung \ref{fig:beziehung} sieht man drei Frames einer Bildsequenz. $Y_{n}
 Das geschätzte Bewegungsvektorfeld $\hat{V}_{n}$ ergibt sich nach den Ausführungen von Aach und Kunz zu: 
 	
 \begin{equation}
-	\hat{V}\textsubscript{n}=\arg\ \smash{\displaystyle\max_{V}} [p(Y_{n},  Y_{n-1},\vert V)\ \cdot \  p(\hat{V}_{n-1} \vert V)\ \cdot \  p(V)]
+	\hat{V}\textsubscript{n}=\arg\ \smash{\displaystyle\max_{V}} \left[p(Y_{n},  Y_{n-1},\vert V)\cdot p(\hat{V}_{n-1} \vert V)\cdot p(V)\right]
 	\label{eq:bayes}
 \end{equation}\\
 	
