--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -146,7 +146,7 @@
 	Die Zielsetzung für das Projekt "`Bewegungsanalyse einer Videosequenz"' war eine Über\-tra\-gung des Ansatzes von Röntgenbildern auf normale Videosequenzen. Infolge dessen war eine Vernachlässigung der speziellen Anforderung des Bildrauschens möglich, da Röntgenbilder -- insbesondere als Teil einer Fluoroskopie -- zum Schutz des Patienten und des medizinischen Personals nur sehr geringe Röntgendosen enthalten dürfen und deshalb ein extrem schlechtes Signal-zu-Rauschverhältnis aufweisen. Diese Problematik besteht bei normalen Videosequenzen nicht, weshalb für die Untersuchung von vergleichsweise geringem und etwa gleich verteiltem Rauschen ausgegangen werden konnte.
 	
 \section{Verfahren}\todo[inline]{Laura}
-	In [1] wird das Verfahren, was dieser Ausarbeitung zu Grunde liegt beschrieben. Der dort 				aufgeführte Algorithmus wurde speziell für Röntgenaufnahmen entwickelt, um Arzt und 					Patienten im Rahmen von Behandlungen, welche Röntgenstrahlung verwenden vor gesundheitlichen 			Konsequenzen zu schützen. Es handelt sich bei dem Ansatz um ein Block-Matching Verfahren, 			welche 	dem Satz von Bayes folgen.
+	In {\cite{aach1998bayesian}} wird das Verfahren, was dieser Ausarbeitung zu Grunde liegt beschrieben. Der dort 				aufgeführte Algorithmus wurde speziell für Röntgenaufnahmen entwickelt, um Arzt und 					Patienten im Rahmen von Behandlungen, welche Röntgenstrahlung verwenden vor gesundheitlichen 			Konsequenzen zu schützen. Es handelt sich bei dem Ansatz um ein Block-Matching Verfahren, 			welche 	dem Satz von Bayes folgen.
 	\\Im vorliegenden Fall soll das Verfahren allerdings auf gewöhnlichen Bildsequenzen angewandt 		werden. Im Folgenden wird das zu grundeliegende Verfahren erläutert und auf eventuelle 				Änderungen im Algorithmus eingegangen. 
 	
 \subsection{Bewegungsschätzung}\todo[inline]{Laura}
@@ -164,7 +164,7 @@ In Abbildung \ref{fig:beziehung} sieht man drei Frames einer Bildsequenz. $Y_{n}
 Das geschätzte Bewegungsvektorfeld $\hat{V}_{n}$ ergibt sich nach den Ausführungen von Aach und Kunz zu: 
 	
 \begin{equation}
-	\hat{V}\textsubscript{n}=\arg\ \smash{\displaystyle\max_{V}} \left[p(Y_{n},  Y_{n-1},\vert V)\cdot p(\hat{V}_{n-1} \vert V)\cdot p(V)\right]
+	\hat{V}_{n}=\arg\ \smash{\displaystyle\max_{V}} \left[p(Y_{n},  Y_{n-1},\vert V)\cdot p(\hat{V}_{n-1} \vert V)\cdot p(V)\right]
 	\label{eq:bayes}
 \end{equation}\\
 	
@@ -247,7 +247,7 @@ Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrsc
 	\begin{figure}[H] 
 		\includegraphics[bb=0 0 256 256, scale=0.77]{Testmaterial1.jpg}
 			\label{fig:testmaterial1}
-			\caption{Standbild Testmaterial 1}
+			\caption{Standbild Testmaterial 1.}
 	\end{figure}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
@@ -261,7 +261,7 @@ Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrsc
 	\begin{figure}[H] 
 		\includegraphics[bb=0 0 256 256, scale=0.77]{Testmaterial2.jpg}
 			\label{fig:testmaterial2}
-			\caption{Standbild Testmaterial 2}
+			\caption{Standbild Testmaterial 2.}
 	\end{figure}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
@@ -275,7 +275,7 @@ Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrsc
 	\begin{figure}[H] 
 		\includegraphics[bb=0 0 256 256, scale=0.77]{Testmaterial3.jpg}
 			\label{fig:testmaterial3}
-			\caption{Standbild Testmaterial 3}
+			\caption{Standbild Testmaterial 3.}
 	\end{figure}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
@@ -284,10 +284,39 @@ Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrsc
 	\vspace{0.4cm}\\
 \end{minipage}
 
-		\subsection{Analyse der Kostenfunktion}\todo[inline]{Laura}
+\subsection{Auswertung Testmaterial 1 und Testmaterial 2}\todo[inline]{Laura}
+\subsection{Auswertung Testmaterial 3}\todo[inline]{Laura}
+Die Bewegung im vorliegenden Testmaterial kann lediglich optisch ausgewertet werden, da die tatsächlichen Bewegungsvektoren nicht bekannt sind. Für die Bewegungsdetektion wurden die folgenden Einstellungen getroffen. \\\\
+\textbf{Parameter:} 
+\begin{itemize} 
+\item 5 Iterationen
+\item $\nu$ = 1.5
+\item $\lambda$ = 0.3 und $\lambda$\textsubscript{T} = 0.3
+\end{itemize}
+
+Abbildung \ref{fig:frame43} und Abbildung \ref{fig:frame47} zeigen jeweils ein Standbild aus dem Bewegungsvektorfeld, welches sich unter dem Namen \textit{testmaterial3-bewegungsvektorfeld.tiff} auf der beiliegenden Daten-CD befindet.\\
+Es ist deutlich zu erkennen, dass die Bereiche in denen keine Bewegung stattfindet weitgehend richtig detektiert wurden. Und auch die Bewegung des Autos und der Radfahrerin scheinen weitgehend richtig erkannt zu werden. Auffällig ist, dass besonders in  
+
+\begin{minipage}{0.5\textwidth}
+	\begin{figure}[H] 
+		\includegraphics[scale=0.43]{frame43.png}
+		\label{fig:frame43}
+		\caption{Bewegungsvektorfeld Testmaterial 3. Frame 43.}
+	\end{figure}
+\end{minipage}
+\begin{minipage}{0.5\textwidth}
+	\begin{figure}[H] 
+		\includegraphics[scale=0.43]{frame47.png}
+		\label{fig:frame47}
+		\caption{Bewegungsvektorfeld Testmaterial 3. Frame 47.}
+	\end{figure}
+\end{minipage}
+
 \subsection{Einschwingverhalten}
 Als Ausgangspunkt werden alle Bewegungsvektorfelder zu Beginn des Algorithmus auf den Nullvektor gesetzt. Das Verfahren muss sich also zunächst Einschwingen. Dabei wird im Folgenden zwischen dem interframe und dem intraframe Einschwingen unterschieden.	
-			\subsubsection{Bewegungsvektorfelder}\todo[inline]{Timo}
+
+\subsubsection{Bewegungsvektorfelder}\todo[inline]{Timo}
+
 \subsubsection{Innerhalb eines Bildes}\todo[inline]{Laura}
 
 		\subsection{Parameter der Regularisierungsterme}\todo[inline]{Timo}
