--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -26,7 +26,7 @@
 	\usepackage{fancyhdr}
 	\usepackage{enumitem} 
 	\parindent0pt
-	%\usepackage[format=plain, justification=RaggedRight, singlelinecheck=false]{caption}
+	\usepackage[format=plain, justification=RaggedRight, singlelinecheck=false]{caption}
 	\usepackage{blindtext}
 	
 	% Listings
@@ -240,7 +240,7 @@ Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrsc
 	da hier durch den Algorithmus begründete Fehlberechnungen auftreten.
 	\section{Auswertung}\todo[inline]{Laura \& Timo}
 
-\subsection{Testmaterial}\todo[inline]{Laura}
+\subsection{Testmaterial}\todo[inline]{Laura}\label{ch:testmaterialien}
 	Das Verfahren wird anhand von drei unterschiedlichen Bildsequenzen getestet, die im Folgenden 		Testmaterial 1-3 genannt werden und alle eine Auflösung von 256x2656 Pixeln haben. Bei 				Testmaterial 1 und Testmaterial 2 wurde ein Bild um bekannte Werte in x- und y-Richtung 				verschoben. Anzumerken ist auch, dass beide Testmaterialien identisch verschoben wurden. Bei 			Testmaterial 3 kann die Bewegung der zu sehenden Objekte lediglich geschätzt werden. Alle 			Testmaterialien wurden für diese Dokumentation aufgenommen bzw. erstellt.\vspace{0.6cm}
 
 \begin{minipage}{0.5\textwidth}
@@ -284,33 +284,45 @@ Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrsc
 	\vspace{0.4cm}\\
 \end{minipage}
 
-\subsection{Auswertung Testmaterial 1 und Testmaterial 2}\todo[inline]{Laura}
-\subsection{Auswertung Testmaterial 3}\todo[inline]{Laura}
-Die Bewegung im vorliegenden Testmaterial kann lediglich optisch ausgewertet werden, da die tatsächlichen Bewegungsvektoren nicht bekannt sind. Für die Bewegungsdetektion wurden die folgenden Einstellungen getroffen. \\\\
-\textbf{Parameter:} 
+\subsection{Auswertung der Testmaterialien}\todo[inline]{Laura}
+Im Folgenden wird das Verfahren anhand der in Kapitel \ref{ch:testmaterialien} aufgeführten Testmaterialien ausgewertet. Dabei wurden für alle Materialien die gleichen Einstellungsparameter gewählt:
 \begin{itemize} 
-\item 5 Iterationen
-\item $\nu$ = 1.5
-\item $\lambda$ = 0.3 und $\lambda$\textsubscript{T} = 0.3
+\item[$\bullet$] 5 Iterationen
+\item[$\bullet$] $\nu$ = 1.5
+\item[$\bullet$] $\lambda$ = 0.3 und $\lambda$\textsubscript{T} = 0.3
 \end{itemize}
 
+In Abbildung \ref{fig:testmaterial12} sind jeweils drei Bewegungsvektorfelder für Testmaterial 1 und Testmaterial 2 zu sehen. Es ist deutlich erkennbar, dass die Bewegungsdetektion sowohl für hochfrequente, als auch für tieffrequente Bildinhalte funktioniert hat. \\
+Die Abweichungen der berechneten von den tatsächlichen Bewegungsvektoren können bestimmt werden, da die Bewegung bekannt ist. Da sich alle Blöcke eines Frames mit der selben Geschwindigkeit in die selbe Richtung bewegen, kann die absolute Längenabweichung der einzelnen Vektoren über ein Frame aufsummiert und durch die Anzahl der Blöcke geteilt werden um ein Maß für die absolute Abweichung zu erhalten.\\
+Schaut man sich die so ermittelten Abweichungen für ein Frame an, wo in den vorherigen Frames keine Richtungsänderung  stattgefunden hat, so beträgt diese im Durchschnitt für beide Testmaterialien ungefähr ein halbes Pixel. Da es wie in Kapitel \ref{ch:Einschwingverhalten} näher beschrieben dauert, bis die Bewegungsvektoren eingeschwungen sind, kommt es in den Frames 50 und 100 in beiden Testmaterialien zu einer Abweichung von bis zu 8 Pixeln. Das sind eben die Frames, wo sich die Bewegung verändert. \\
+
+\begin{figure}[H] 
+		\centering
+		\includegraphics[scale=1.0]{testmaterial12.jpg} 
+			\caption{Bewegungsvektorfelder v.l.n.r. Frame 10, Frame 60 und Frame 110.\newline Oben Testmarial 1 und unten Testmaterial 2.}
+			\label{fig:testmaterial12}
+	\end{figure}
+
+Da es sich bei Testmaterial 3 um eine reale Videosequenz handelt, deren Bewegungsvektoren unbekannt sind, kann die Auswertung hier nur rein visuell vorgenommen werden.\\\\
 Abbildung \ref{fig:frame43} und Abbildung \ref{fig:frame47} zeigen jeweils ein Standbild aus dem Bewegungsvektorfeld, welches sich unter dem Namen \textit{testmaterial3-bewegungsvektorfeld.tiff} auf der beiliegenden Daten-CD befindet.\\
-Es ist deutlich zu erkennen, dass die Bereiche in denen keine Bewegung stattfindet weitgehend richtig detektiert wurden. Und auch die Bewegung des Autos und der Radfahrerin werden trotz der Verdeckung durch die Säule weitgehend erkannt. Auffällig ist, dass besonders die Blöcke, die hinter dem Auto liegen und deren Bildinhalt sich nicht mehr bewegt falsch berechnet sind. Das ist besonders gut in Abbildung \ref{fig:frame47} zu sehen und lässt sich auf das Einschwingverhalten zurückführen. Dieses wird in Kapitel \ref{ch:Einschwingverhalten} erklärt und ausgewertet.
+Es ist deutlich zu erkennen, dass die Bereiche in denen keine Bewegung stattfindet weitgehend richtig detektiert wurden. Und auch die Bewegung des Autos und der Radfahrerin werden trotz der Verdeckung durch die Säule weitgehend erkannt. Auffällig ist, dass besonders die Blöcke, die hinter dem Auto liegen und deren Bildinhalt sich nicht mehr bewegt falsch berechnet sind. Das ist besonders gut in Abbildung \ref{fig:frame47} zu sehen und lässt sich auf das Einschwingverhalten zurückführen. Dieses wird in Kapitel \ref{ch:Einschwingverhalten} erklärt und ausgewertet.\\
 
 \begin{minipage}{0.5\textwidth}
 	\begin{figure}[H] 
-		\includegraphics[scale=0.42]{frame43.png}
-		\caption{Bewegungsvektorfeld Testmaterial 3. Frame 43.}
+		\includegraphics[scale=0.4]{frame43.png}
+			\caption{Bewegungsvektorfeld \newline Testmaterial 3. Frame 43.}
 		\label{fig:frame43}
 	\end{figure}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
 	\begin{figure}[H] 
-		\includegraphics[scale=0.42]{frame47.png}
-		\caption{Bewegungsvektorfeld Testmaterial 3. Frame 47.}
+		\includegraphics[scale=0.4]{frame47.png}
+			\caption{Bewegungsvektorfeld \newline Testmaterial 3. Frame 47.}
 		\label{fig:frame47}
 	\end{figure}
-\end{minipage}
+\end{minipage}\vspace{0.7cm}
+
+Alle erzeugten Bewegungsvektorfelder können auf der beiliegenden Daten-CD eingesehen werden. Die Dateien heißen \textit{bvf-1.tiff}, \textit{bvf-2.tiff} und \textit{bvf-3.tiff}.
 
 \subsection{Einschwingverhalten} \label{ch:Einschwingverhalten}
 Als Ausgangspunkt werden alle Bewegungsvektorfelder zu Beginn des Algorithmus auf den Nullvektor gesetzt. Das Verfahren muss sich also zunächst Einschwingen. Dabei wird im Folgenden zwischen dem interframe und dem intraframe Einschwingen unterschieden.	
@@ -318,6 +330,7 @@ Als Ausgangspunkt werden alle Bewegungsvektorfelder zu Beginn des Algorithmus au
 \subsubsection{Bewegungsvektorfelder}\todo[inline]{Timo}
 
 \subsubsection{Innerhalb eines Bildes}\todo[inline]{Laura}
+Im Folgenden wird untersucht, in wie fern 
 
 		\subsection{Parameter der Regularisierungsterme}\todo[inline]{Timo}
 	\section{Zusammenfassung}\todo[inline]{Lukas}
